# vimotrack

./: README.md  config.toml  info.md  main.py  setup.cfg
helper/: parse_cli.py
tests/: opencv_helper.py
vimotrack/: main.py
vimotrack/lib/: detector.py
