[metadata]
name = vimotrack
version = 0.0.1
author = Jatin Pandey
author_email = pandeyjatin47@gmail.com
description = video motion detector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jatin837/vimotrack

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
